--- a/index.css
+++ b/index.css
@@ -1,6 +1,44 @@
 html,
 body {
-	padding: 0;
-	margin: 0;
+  font-family: Roboto, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background: #3893C6;
+  color: #FFFFFF;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding: 8px;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  width: 100%;
+}
+
+.main {
+  bottom: 0;
+  left: 0;
+  overflow: scroll;
+  position: absolute;
+  right: 0;
+  top: 40px;
+}
+
+a.emoji {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  width: 50%;
+}
+
+a.emoji:hover {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  color: #3893C6;
+  transition: all 0.5s ease-out;
 }
 
